# image_mgr

./: .dockerignore  .envrc  .gitignore  .prettierignore  Cargo.toml  Dockerfile  README.md  config.toml  package-lock.json  package.json
.cursor/rules/: commits-chinese.mdc
frontend/: app.js  index.html  style.css
scripts/: build-container.sh  example-build.sh
src/: api.rs  build.rs  config.rs  download_stats.rs  main.rs  storage.rs
